test_files/netlist_validation/invalid/invalid_03.net
+ orphan continuation
V1 N001 0 12
R1 OUT N001 5k
.tf V(OUT) V1
.backanno
.end
